# cpp-simple-starter

./: CMakeLists.txt  README.md  build.sh  run.sh
src/: main.cpp
